samples/_failures_safe/1761532340_51608d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5c91655.c: In function ‘main’:
./samples/SAFE/__tmp_f5c91655.c:162:9: error: expected declaration or statement at end of input
  162 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_f5c91655.c:162:9: error: expected declaration or statement at end of input
